--- a/chain_adjustment.html
+++ b/chain_adjustment.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="res/sibling.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
-  <title>Home</title>
+  <title>Machine chain adjustment</title>
 </head>
 <body id="site-body" onload="sLoaded()">
     <header id="site-header">
@@ -22,9 +22,9 @@
         <nav id="site-nav">
             <div class="treesite">
  <ul>
-  <li><button class="tree blank"></button><a class="active" href="index.html">Home</a></li>
+  <li><button class="tree blank"></button><a href="index.html">Home</a></li>
   <li><button class="tree blank"></button><a href="head.html">Clean laser head, lens and nozzle</a></li>
-  <li><button class="tree blank"></button><a href="chain_adjustment.html">Machine chain adjustment</a></li>
+  <li><button class="tree blank"></button><a class="active" href="chain_adjustment.html">Machine chain adjustment</a></li>
   <li><button class="tree blank"></button><a href="chiller.html">Chiller weekly inspection</a></li>
   <li><button class="tree blank"></button><a href="m2.html">Clean operation panel, mouse and keyboard</a></li>
   <li><button class="tree blank"></button><a href="m3.html">Clean XYZ guide rails</a></li>
@@ -43,28 +43,32 @@
   </button>
  </div>
  <div>
-  <a href="index.html">Home</a>
+  <a href="chain_adjustment.html">Machine chain adjustment</a>
  </div>
 </nav>
 
             <div id="site-crumb-below">
                 <div id="site-toc-left">
                     <article id="article">
-                        <h1>Home</h1>
-<div style="text-align:center; margin-top: 100px;">
-  <h1 style="font-size: 48px;">JFY+ Maintenance manual</h1>
-  <p style="font-size: 18px; margin-top: 30px;">Version 1.0</p>
-  <p style="font-size: 18px;">Released: April 21, 2025</p>
-  <p style="font-size: 18px; margin-top: 30px;">© 2025 JFY</p>
+                        <h1>Machine chain adjustment</h1>
+<div class="paragraph">
+<p>The chain of the machine should be inspected every 6 months. Re-tighten the chain if it’s found to be loose. Tightening procedures:</p>
 </div>
-<div class="paragraph text-center">
-<p><strong>Contact: <a href="mailto:support@metamation.com">support@metamation.com</a></strong></p>
+<div class="paragraph">
+<p>Step1: Loosen the screws on the installation plate of the chain wheel;</p>
 </div>
-<div class="paragraph text-center">
-<p><strong>Copyright © 2025 by Metamation. All rights reserved.</strong></p>
+<div class="paragraph">
+<p>Step2: Adjust the chain wheel to a proper position with the adjustment screw of the chain wheel；</p>
 </div>
-<div style="page-break-after: always;"></div>
-<!-- toc disabled -->
+<div class="paragraph">
+<p>Step3: Tighten the nuts on the installation plate of the chain wheel after adjustment.</p>
+</div>
+<div class="paragraph">
+<p><span class="image"><img src="img/chain1.png" alt="chain1"></span></p>
+</div>
+<div class="paragraph">
+<p><span class="image"><img src="img/chain2.png" alt="chain2"></span></p>
+</div>
 
                     </article>
                 </div>
@@ -73,7 +77,8 @@
                 </div>
             </div>
             <nav class="pagination">
- <span class="next"><a href="head.html">Clean laser head, lens and nozzle</a></span>
+ <span class="prev"><a href="head.html">Clean laser head, lens and nozzle</a></span>
+ <span class="next"><a href="chiller.html">Chiller weekly inspection</a></span>
 </nav>
 
         </div>
@@ -88,7 +93,7 @@
         </div>
         <div class="middle"></div>
         <div class="right">
-            <p>Compiled 2025.10.19 by Bento 56</p>
+            <p>Compiled by Bento</p>
             <img src="res/bento.png" />
         </div>
     </footer>
