--- a/chiller.html
+++ b/chiller.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="res/sibling.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
-  <title>Home</title>
+  <title>Chiller weekly inspection</title>
 </head>
 <body id="site-body" onload="sLoaded()">
     <header id="site-header">
@@ -22,10 +22,10 @@
         <nav id="site-nav">
             <div class="treesite">
  <ul>
-  <li><button class="tree blank"></button><a class="active" href="index.html">Home</a></li>
+  <li><button class="tree blank"></button><a href="index.html">Home</a></li>
   <li><button class="tree blank"></button><a href="head.html">Clean laser head, lens and nozzle</a></li>
   <li><button class="tree blank"></button><a href="chain_adjustment.html">Machine chain adjustment</a></li>
-  <li><button class="tree blank"></button><a href="chiller.html">Chiller weekly inspection</a></li>
+  <li><button class="tree blank"></button><a class="active" href="chiller.html">Chiller weekly inspection</a></li>
   <li><button class="tree blank"></button><a href="m2.html">Clean operation panel, mouse and keyboard</a></li>
   <li><button class="tree blank"></button><a href="m3.html">Clean XYZ guide rails</a></li>
   <li><button class="tree blank"></button><a href="m4.html">Clear slag removal cart</a></li>
@@ -43,28 +43,32 @@
   </button>
  </div>
  <div>
-  <a href="index.html">Home</a>
+  <a href="chiller.html">Chiller weekly inspection</a>
  </div>
 </nav>
 
             <div id="site-crumb-below">
                 <div id="site-toc-left">
                     <article id="article">
-                        <h1>Home</h1>
-<div style="text-align:center; margin-top: 100px;">
-  <h1 style="font-size: 48px;">JFY+ Maintenance manual</h1>
-  <p style="font-size: 18px; margin-top: 30px;">Version 1.0</p>
-  <p style="font-size: 18px;">Released: April 21, 2025</p>
-  <p style="font-size: 18px; margin-top: 30px;">© 2025 JFY</p>
+                        <h1>Chiller weekly inspection</h1>
+<div class="paragraph">
+<p>Weekly inspection is a primary content for routine maintenance of the water chiller.</p>
 </div>
-<div class="paragraph text-center">
-<p><strong>Contact: <a href="mailto:support@metamation.com">support@metamation.com</a></strong></p>
+<div class="paragraph">
+<p>Weekly inspection shall include:</p>
 </div>
-<div class="paragraph text-center">
-<p><strong>Copyright © 2025 by Metamation. All rights reserved.</strong></p>
+<div class="paragraph">
+<p>1、Check filter screen, clean the dust and foreign matter；</p>
 </div>
-<div style="page-break-after: always;"></div>
-<!-- toc disabled -->
+<div class="paragraph">
+<p>2、Check water tank liquid level, add water in time when the level is low；</p>
+</div>
+<div class="paragraph">
+<p>3、Dedust the external equipment.</p>
+</div>
+<div class="paragraph">
+<p><span class="image"><img src="img/cill.png" alt="cill"></span></p>
+</div>
 
                     </article>
                 </div>
@@ -73,7 +77,8 @@
                 </div>
             </div>
             <nav class="pagination">
- <span class="next"><a href="head.html">Clean laser head, lens and nozzle</a></span>
+ <span class="prev"><a href="chain_adjustment.html">Machine chain adjustment</a></span>
+ <span class="next"><a href="m2.html">Clean operation panel, mouse and keyboard</a></span>
 </nav>
 
         </div>
@@ -88,7 +93,7 @@
         </div>
         <div class="middle"></div>
         <div class="right">
-            <p>Compiled 2025.10.19 by Bento 56</p>
+            <p>Compiled by Bento</p>
             <img src="res/bento.png" />
         </div>
     </footer>
