--- a/m2.html
+++ b/m2.html
@@ -24,6 +24,8 @@
  <ul>
   <li><button class="tree blank"></button><a href="index.html">Home</a></li>
   <li><button class="tree blank"></button><a href="head.html">Clean laser head, lens and nozzle</a></li>
+  <li><button class="tree blank"></button><a href="chain_adjustment.html">Machine chain adjustment</a></li>
+  <li><button class="tree blank"></button><a href="chiller.html">Chiller weekly inspection</a></li>
   <li><button class="tree blank"></button><a class="active" href="m2.html">Clean operation panel, mouse and keyboard</a></li>
   <li><button class="tree blank"></button><a href="m3.html">Clean XYZ guide rails</a></li>
   <li><button class="tree blank"></button><a href="m4.html">Clear slag removal cart</a></li>
@@ -60,7 +62,7 @@
                 </div>
             </div>
             <nav class="pagination">
- <span class="prev"><a href="head.html">Clean laser head, lens and nozzle</a></span>
+ <span class="prev"><a href="chiller.html">Chiller weekly inspection</a></span>
  <span class="next"><a href="m3.html">Clean XYZ guide rails</a></span>
 </nav>
 
