--- a/index.html
+++ b/index.html
@@ -4,33 +4,28 @@
   <meta charset="utf-8">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Semi+Condensed:wght@400;600&family=Nunito+Sans:ital,wght@0,400;0,600;1,400;1,600&family=Roboto+Mono:ital,wght@0,400;0,600;1,400;1,600&display=block" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="res/bento.css">
   <link rel="stylesheet" href="res/site.css">
   <link rel="stylesheet" href="res/tree.css">
   <link rel="stylesheet" href="res/sibling.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  
-  <title>Home</title>
+  <link rel="icon" type="image/x-icon" href="img/jfy-icon.png">
+  <title>Introduction</title>
 </head>
 <body id="site-body" onload="sLoaded()">
     <header id="site-header">
         <div id="header-logo"><img src="img/logo.png" width="120" height="34" /></div>
-        <div><p>Maintenance manual JFY+</p></div>
+        <div><p>Vulcan Maintenance manual</p></div>
     </header>
     <div id="site-main">
         <nav id="site-nav">
             <div class="treesite">
  <ul>
-  <li><button class="tree blank"></button><a class="active" href="index.html">Home</a></li>
-  <li><button class="tree blank"></button><a href="head.html">Clean laser head, lens and nozzle</a></li>
-  <li><button class="tree blank"></button><a href="chain_adjustment.html">Machine chain adjustment</a></li>
-  <li><button class="tree blank"></button><a href="chiller.html">Chiller weekly inspection</a></li>
-  <li><button class="tree blank"></button><a href="m2.html">Clean operation panel, mouse and keyboard</a></li>
-  <li><button class="tree blank"></button><a href="m3.html">Clean XYZ guide rails</a></li>
-  <li><button class="tree blank"></button><a href="m4.html">Clear slag removal cart</a></li>
-  <li><button class="tree blank"></button><a href="m5.html">Remove foreign objects from machine and pallet changer</a></li>
-  <li><button class="tree blank"></button><a href="m6.html">Clean dusts in electrical cabinet</a></li>
+  <li><button class="tree blank"></button><a class="active" href="index.html">Introduction</a></li>
+  <li><button class="tree blank"></button><a href="40h.html">Emptying the condensed water container</a></li>
+  <li><button class="tree blank"></button><a href="100h1.html">Check the filter mat and cleaning/replacing if necessary</a></li>
+  <li><button class="tree blank"></button><a href="100h2.html">Check and clean the laser filter mat</a></li>
  </ul>
 </div>
 
@@ -43,37 +38,206 @@
   </button>
  </div>
  <div>
-  <a href="index.html">Home</a>
+  <a href="index.html">Introduction</a>
  </div>
 </nav>
 
             <div id="site-crumb-below">
                 <div id="site-toc-left">
                     <article id="article">
-                        <h1>Home</h1>
-<div style="text-align:center; margin-top: 100px;">
-  <h1 style="font-size: 48px;">JFY+ Maintenance manual</h1>
-  <p style="font-size: 18px; margin-top: 30px;">Version 1.0</p>
-  <p style="font-size: 18px;">Released: April 21, 2025</p>
-  <p style="font-size: 18px; margin-top: 30px;">© 2025 JFY</p>
+                        <h1>Introduction</h1>
+<div id="preamble">
+<div class="sectionbody">
+<div class="paragraph">
+<p>The purpose of this manual is to provide instructions and guidelines for
+maintaining the Laser cutter. It covers routine maintenance tasks,
+troubleshooting procedures, and best practices to ensure optimal performance and
+longevity of the Laser cutter.</p>
 </div>
-<div class="paragraph text-center">
-<p><strong>Contact: <a href="mailto:support@metamation.com">support@metamation.com</a></strong></p>
 </div>
-<div class="paragraph text-center">
-<p><strong>Copyright © 2025 by Metamation. All rights reserved.</strong></p>
 </div>
-<div style="page-break-after: always;"></div>
-<!-- toc disabled -->
+<div class="sect1">
+<h2 id="_information_on_maintenance">Information on maintenance</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Correct maintenance is essential for the machine to remain functional and safe.
+It prevents operational malfunctions and their consequences.</p>
+</div>
+<div class="admonitionblock warning">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-warning" title="Warning"></i>
+</td>
+<td class="content">
+<div class="title">Risk of fatal injury during maintenance work with the machine switched on!</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p>Unless expressly stated otherwise: Switch off the MAIN SWITCH of
+the machine and the MAIN SWITCH of the respective components.</p>
+</li>
+<li>
+<p>Lock the MAIN SWITCH and pull out the key.</p>
+</li>
+</ol>
+</div>
+</td>
+</tr>
+</table>
+</div>
+<div class="paragraph">
+<div class="title">Before commissioning the machine:</div>
+<p>The machine must be lubricated carefully in accordance with the lubrication
+chart before being put into service. The entire lubrication of the machine has
+to be checked if the machine has not been used for a long time (e.g. overseas
+transport). If required, the gummy oil must be completely removed from all
+lubrication points and supply lines.</p>
+</div>
+<div class="paragraph">
+<div class="title">Trained personnel for operational safety:</div>
+<p>Some maintenance work includes visual inspections to ensure operational safety.
+These visual inspections may only be performed by appropriately trained
+personnel.</p>
+</div>
+<div class="paragraph">
+<div class="title">Maintenance personnel:</div>
+<p>The user must authorize the maintenance personnel to perform maintenance work on
+the machine.</p>
+</div>
+<div class="paragraph">
+<p>Depending upon the labeling, the maintenance work must be done by the persons as
+specified in the following table:</p>
+</div>
+<table class="tableblock frame-all grid-all fit-content">
+<colgroup>
+<col>
+<col>
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-left valign-top">Label</th>
+<th class="tableblock halign-left valign-top">Maintenance personnel</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><span class="image"><img src="img/operator.png" alt="Operator"></span></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Machine Operator</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><span class="image"><img src="img/trained.png" alt="Trained"></span></p></td>
+<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+<p>Trained Maintenance Personnel:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Work on the following assemblies requires specialist knowledge in the relevant area:</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Electrics.</p>
+</li>
+<li>
+<p>Hydraulics.</p>
+</li>
+<li>
+<p>Pneumatics.</p>
+</li>
+<li>
+<p>Mechanics.</p>
+</li>
+<li>
+<p>Laser.</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>National regulations also apply.</p>
+</li>
+</ul>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><span class="image"><img src="img/service.png" alt="Service"></span></p></td>
+<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+<p>Technical Service:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>This maintenance work may only be carried out by JFY&#8217;s Technical Service.</p>
+</li>
+</ul>
+</div></div></td>
+</tr>
+</tbody>
+</table>
+<div class="ulist">
+<div class="title">Notes on cleaning:</div>
+<ul>
+<li>
+<p>The entire system should be cleaned at regular intervals.</p>
+</li>
+<li>
+<p>Brush off large elements of dirt and dust or remove them using an industrial vacuum cleaner.</p>
+</li>
+</ul>
+</div>
+<div class="ulist">
+<div class="title">Lubrication precautions:</div>
+<ul>
+<li>
+<p>Refer to the lubrication schematic and maintenance instructions
+for lubrication of the machine. The following points should also be observed:</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Do not leave filler and drainage caps open for longer than necessary and keep
+them clean.</p>
+</li>
+<li>
+<p>Drain the waste oil only at operating temperature.</p>
+</li>
+<li>
+<p>Use only lint-free cleaning cloths and low-viscosity spindle oil ("scavenge
+oil") to clean oil chambers and lubricating points. Do not use cleaning wool,
+kerosene or benzene.</p>
+</li>
+<li>
+<p>Do not mix synthetic lubricating oils with mineral oils or synthetic oils
+from other manufacturers, even if the synthetic oil in question has equivalent
+properties.</p>
+</li>
+<li>
+<p>Dispose of waste oil appropriately.</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+</div>
 
                     </article>
                 </div>
                 <div id="site-toc-holder">
-                    <aside id="site-toc"></aside>
+                    <aside id="site-toc">
+ <h3>Contents</h3>
+ <ul>
+  <li level="1">
+   <a href="#_information_on_maintenance">Information on maintenance</a>
+  </li>
+ </ul>
+</aside>
+
                 </div>
             </div>
             <nav class="pagination">
- <span class="next"><a href="head.html">Clean laser head, lens and nozzle</a></span>
+ <span class="next"><a href="40h.html">Emptying the condensed water container</a></span>
 </nav>
 
         </div>
@@ -84,11 +248,11 @@
     </div>
     <footer id="site-footer">
         <div class="left">
-            <p>&nbsp;&nbsp;Copyright © 2025 by Jiangsu Jinfangyuan CNC Machine Co.. All rights reserved.</p>
+            <p>&nbsp;&nbsp;Copyright &copy; 2025 JFY International. All rights reserved.</p>
         </div>
         <div class="middle"></div>
         <div class="right">
-            <p>Compiled 2025.10.19 by Bento 56</p>
+            <p>Compiled 2025.12.10 by Bento 58</p>
             <img src="res/bento.png" />
         </div>
     </footer>
