--- a/index.html
+++ b/index.html
@@ -11,21 +11,28 @@
   <link rel="stylesheet" href="res/sibling.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" type="image/x-icon" href="img/jfy-icon.png">
-  <title>Introduction</title>
+  <title>Safety instructions</title>
 </head>
 <body id="site-body" onload="sLoaded()">
     <header id="site-header">
         <div id="header-logo"><img src="img/logo.png" width="120" height="34" /></div>
-        <div><p>Vulcan Maintenance manual</p></div>
+        <div><p>JFY laser machine - Maintenance manual</p></div>
     </header>
     <div id="site-main">
         <nav id="site-nav">
             <div class="treesite">
  <ul>
-  <li><button class="tree blank"></button><a class="active" href="index.html">Introduction</a></li>
-  <li><button class="tree blank"></button><a href="40h.html">Emptying the condensed water container</a></li>
-  <li><button class="tree blank"></button><a href="100h1.html">Check the filter mat and cleaning/replacing if necessary</a></li>
-  <li><button class="tree blank"></button><a href="100h2.html">Check and clean the laser filter mat</a></li>
+  <li><button class="tree blank"></button><a class="active" href="index.html">Safety instructions</a></li>
+  <li><button class="tree blank"></button><a href="maintenance.html">Maintenance overview</a></li>
+  <li>
+   <button class="tree closed"></button>
+   <a href="maintenancetask/index.html">Maintenance tasks</a>
+   <ul class="hide">
+    <li><button class="tree blank"></button><a href="maintenancetask/40h.html">Emptying the condensed water container</a></li>
+    <li><button class="tree blank"></button><a href="maintenancetask/100h1.html">Check the filter mat and cleaning/replacing if necessary</a></li>
+    <li><button class="tree blank"></button><a href="maintenancetask/100h2.html">Check and clean the laser filter mat</a></li>
+   </ul>
+  </li>
  </ul>
 </div>
 
@@ -38,206 +45,134 @@
   </button>
  </div>
  <div>
-  <a href="index.html">Introduction</a>
+  <a href="index.html">Safety instructions</a>
  </div>
 </nav>
 
             <div id="site-crumb-below">
                 <div id="site-toc-left">
                     <article id="article">
-                        <h1>Introduction</h1>
-<div id="preamble">
-<div class="sectionbody">
+                        <h1>Safety instructions</h1>
 <div class="paragraph">
-<p>The purpose of this manual is to provide instructions and guidelines for
-maintaining the Laser cutter. It covers routine maintenance tasks,
-troubleshooting procedures, and best practices to ensure optimal performance and
-longevity of the Laser cutter.</p>
+<div class="title">Safety section</div>
+<p>The '<strong>Safety</strong>' chapter describes the safety concept of the
+machine. It specifies the guards and the manufacturer&#8217;s design measures for safe
+operation of the machine. It points out dangers when transport the machine and
+specifies measures taken by the user to avoid possible dangers. The '<strong>Hazards</strong>'
+section is based on the manufacturer&#8217;s risk assessment and describes the
+residual risk. The user must take measures to prevent the hazards. The measures
+must comply with the national safety and accident prevention regulations of the
+country in which the machine is operated.</p>
 </div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_information_on_maintenance">Information on maintenance</h2>
-<div class="sectionbody">
 <div class="paragraph">
-<p>Correct maintenance is essential for the machine to remain functional and safe.
-It prevents operational malfunctions and their consequences.</p>
+<div class="title">Warning signs and information plates</div>
+<p>Dangerous points on the machine are marked with warning
+signs and information plates.</p>
 </div>
-<div class="admonitionblock warning">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-warning" title="Warning"></i>
-</td>
-<td class="content">
-<div class="title">Risk of fatal injury during maintenance work with the machine switched on!</div>
+<div class="paragraph">
+<div class="title">Warning</div>
+<p>This operation manual contains warnings, which warn of dangers and
+specify measures to avoid these dangers.</p>
+</div>
+<div class="paragraph">
+<p>Warnings have the following structure:</p>
+</div>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>Unless expressly stated otherwise: Switch off the MAIN SWITCH of
-the machine and the MAIN SWITCH of the respective components.</p>
+<p>The signal word designates the degree of a danger.<br></p>
 </li>
 <li>
-<p>Lock the MAIN SWITCH and pull out the key.</p>
+<p>The danger description specifies the danger and the possible consequences if
+attention is not paid to the danger.<br></p>
+</li>
+<li>
+<p>The measures for prevention of danger are planned.</p>
 </li>
 </ol>
 </div>
-</td>
-</tr>
-</table>
+<div class="paragraph">
+<p>Examples of a warning:</p>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="img/danger.png" alt="Danger">
+</div>
+</div>
+<div class="exampleblock">
+<div class="content">
+<div class="paragraph">
+<p><strong>Risk of fatal injury due to falling load!</strong><br></p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Observe the safety regulations for transport heavy loads.<br></p>
+</li>
+<li>
+<p>Never walk under a suspended load.<br></p>
+</li>
+<li>
+<p>Use certified lifting power and means of transportation of sufficient size.<br></p>
+</li>
+<li>
+<p>Employ qualified personnel to transport the machine.<br></p>
+</li>
+<li>
+<p>Carry out transport in accordance with the transport regulations.</p>
+</li>
+</ul>
+</div>
+</div>
 </div>
 <div class="paragraph">
-<div class="title">Before commissioning the machine:</div>
-<p>The machine must be lubricated carefully in accordance with the lubrication
-chart before being put into service. The entire lubrication of the machine has
-to be checked if the machine has not been used for a long time (e.g. overseas
-transport). If required, the gummy oil must be completely removed from all
-lubrication points and supply lines.</p>
-</div>
-<div class="paragraph">
-<div class="title">Trained personnel for operational safety:</div>
-<p>Some maintenance work includes visual inspections to ensure operational safety.
-These visual inspections may only be performed by appropriately trained
-personnel.</p>
-</div>
-<div class="paragraph">
-<div class="title">Maintenance personnel:</div>
-<p>The user must authorize the maintenance personnel to perform maintenance work on
-the machine.</p>
-</div>
-<div class="paragraph">
-<p>Depending upon the labeling, the maintenance work must be done by the persons as
-specified in the following table:</p>
+<p>Warning notices include the following warnings:</p>
 </div>
 <table class="tableblock frame-all grid-all fit-content">
 <colgroup>
 <col>
 <col>
+<col>
 </colgroup>
 <thead>
 <tr>
+<th class="tableblock halign-left valign-top">Signal word</th>
 <th class="tableblock halign-left valign-top">Label</th>
-<th class="tableblock halign-left valign-top">Maintenance personnel</th>
+<th class="tableblock halign-left valign-top">Description</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><span class="image"><img src="img/operator.png" alt="Operator"></span></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Machine Operator</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Danger</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><span class="image"><img src="img/danger.png" alt="Danger"></span></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">If the dangerous situation is not prevented, death or serious injuries will result.</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><span class="image"><img src="img/trained.png" alt="Trained"></span></p></td>
-<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p>Trained Maintenance Personnel:</p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p>Work on the following assemblies requires specialist knowledge in the relevant area:</p>
-<div class="ulist">
-<ul>
-<li>
-<p>Electrics.</p>
-</li>
-<li>
-<p>Hydraulics.</p>
-</li>
-<li>
-<p>Pneumatics.</p>
-</li>
-<li>
-<p>Mechanics.</p>
-</li>
-<li>
-<p>Laser.</p>
-</li>
-</ul>
-</div>
-</li>
-<li>
-<p>National regulations also apply.</p>
-</li>
-</ul>
-</div></div></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Warning</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><span class="image"><img src="img/warning.png" alt="Warning"></span></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">If the dangerous situation is not prevented, death or serious injuries could result.</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><span class="image"><img src="img/service.png" alt="Service"></span></p></td>
-<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p>Technical Service:</p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p>This maintenance work may only be carried out by JFY&#8217;s Technical Service.</p>
-</li>
-</ul>
-</div></div></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Caution</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><span class="image"><img src="img/caution.png" alt="Caution"></span></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">If the dangerous situation is not prevented, minor or moderate injuries could result.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Notice</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><span class="image"><img src="img/notice.png" alt="Notice"></span></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">If the dangerous situation is not prevented, property damage could result.</p></td>
 </tr>
 </tbody>
 </table>
-<div class="ulist">
-<div class="title">Notes on cleaning:</div>
-<ul>
-<li>
-<p>The entire system should be cleaned at regular intervals.</p>
-</li>
-<li>
-<p>Brush off large elements of dirt and dust or remove them using an industrial vacuum cleaner.</p>
-</li>
-</ul>
-</div>
-<div class="ulist">
-<div class="title">Lubrication precautions:</div>
-<ul>
-<li>
-<p>Refer to the lubrication schematic and maintenance instructions
-for lubrication of the machine. The following points should also be observed:</p>
-<div class="ulist">
-<ul>
-<li>
-<p>Do not leave filler and drainage caps open for longer than necessary and keep
-them clean.</p>
-</li>
-<li>
-<p>Drain the waste oil only at operating temperature.</p>
-</li>
-<li>
-<p>Use only lint-free cleaning cloths and low-viscosity spindle oil ("scavenge
-oil") to clean oil chambers and lubricating points. Do not use cleaning wool,
-kerosene or benzene.</p>
-</li>
-<li>
-<p>Do not mix synthetic lubricating oils with mineral oils or synthetic oils
-from other manufacturers, even if the synthetic oil in question has equivalent
-properties.</p>
-</li>
-<li>
-<p>Dispose of waste oil appropriately.</p>
-</li>
-</ul>
-</div>
-</li>
-</ul>
-</div>
-</div>
-</div>
 
                     </article>
                 </div>
                 <div id="site-toc-holder">
-                    <aside id="site-toc">
- <h3>Contents</h3>
- <ul>
-  <li level="1">
-   <a href="#_information_on_maintenance">Information on maintenance</a>
-  </li>
- </ul>
-</aside>
-
+                    <aside id="site-toc"></aside>
                 </div>
             </div>
             <nav class="pagination">
- <span class="next"><a href="40h.html">Emptying the condensed water container</a></span>
+ <span class="next"><a href="maintenance.html">Maintenance overview</a></span>
 </nav>
 
         </div>
@@ -252,7 +187,7 @@ properties.</p>
         </div>
         <div class="middle"></div>
         <div class="right">
-            <p>Compiled 2025.12.10 by Bento 58</p>
+            <p>Compiled 2025.12.11 by Bento 58</p>
             <img src="res/bento.png" />
         </div>
     </footer>
