--- a/TRUMPF/maintenancetask/7000h.html
+++ b/TRUMPF/maintenancetask/7000h.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../res/sibling.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" type="image/x-icon" href="../img/trumpf-icon.png">
-  <title>Lubricating the fixing device on pallet changer</title>
+  <title>Replace the filter cartridge</title>
 </head>
 <body id="site-body" onload="sLoaded()">
     <header id="site-header">
@@ -43,7 +43,7 @@
     <li><button class="tree blank"></button><a href="500h4.html">Check the traction chain and drive pin</a></li>
     <li><button class="tree blank"></button><a href="500h5.html">Check the plate positioning clamp</a></li>
     <li><button class="tree blank"></button><a href="1000h.html">Check the safety door lock of the protective door</a></li>
-    <li><button class="tree blank"></button><a class="active" href="2000h.html">Lubricating the fixing device on pallet changer</a></li>
+    <li><button class="tree blank"></button><a href="2000h.html">Lubricating the fixing device on pallet changer</a></li>
     <li><button class="tree blank"></button><a href="2000h1.html">Check the filter of dispatch</a></li>
     <li><button class="tree blank"></button><a href="2000h2.html">Testing the input controller for operating pressure</a></li>
     <li><button class="tree blank"></button><a href="2000h3.html">Replace the filter of the compressed air device</a></li>
@@ -61,7 +61,7 @@
     <li><button class="tree blank"></button><a href="3000h1.html">Measure the conductivity of the cooling water</a></li>
     <li><button class="tree blank"></button><a href="3000h2.html">Testing EMERGENCY STOP push-button</a></li>
     <li><button class="tree blank"></button><a href="4000h.html">Check the guide carriage on the Z axe</a></li>
-    <li><button class="tree blank"></button><a href="7000h.html">Replace the filter cartridge</a></li>
+    <li><button class="tree blank"></button><a class="active" href="7000h.html">Replace the filter cartridge</a></li>
    </ul>
   </li>
  </ul>
@@ -80,52 +80,56 @@
  </div>
  <div>/</div>
  <div>
-  <a href="2000h.html">Lubricating the fixing device on pallet changer</a>
+  <a href="7000h.html">Replace the filter cartridge</a>
  </div>
 </nav>
 
             <div id="site-crumb-below">
                 <div id="site-toc-left">
                     <article id="article">
-                        <h1>Lubricating the fixing device on pallet changer</h1>
+                        <h1>Replace the filter cartridge</h1>
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<div class="title">Trained Maintenance Personnel</div>
-<p><span class="image"><img src="img/trained.png" alt="Trained"></span></p>
+<div class="title">Machine Operator</div>
+<p><span class="image"><img src="img/operator.png" alt="Operator"></span></p>
 </div>
 <div class="paragraph">
 <div class="title">Maintenance interval</div>
-<p>2000 hours of operation</p>
+<p>7000 hours of operation</p>
 </div>
 <div class="paragraph">
-<div class="title">Means, Tools, Material</div>
-<p>Lubricant Dry Lube 400ml (0367578)</p>
+<div class="title">Means, Tools, Materials</div>
+<p>Breathing mask of the safety class FFP3</p>
 </div>
 </div>
 </div>
 <div class="sect1">
 <h2 id="_procedure">Procedure</h2>
 <div class="sectionbody">
-<div class="imageblock">
-<div class="content">
-<img src="img/2000h.png" alt="Fixing device on pallet changer" width="415">
-</div>
-</div>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>Switch off the MAIN SWITCH, lock it and pull out the key.</p>
-</li>
-<li>
-<p>Check and lubricate the fixing device.</p>
-<div class="ulist">
-<ul>
-<li>
-<p>If necessary, contact TRUMPF Technical Service.</p>
-</li>
-</ul>
+<p>Switch off the system and cut off the power.</p>
+<div class="imageblock">
+<div class="content">
+<img src="img/7000h.png" alt="Filter cartridge replacement" width="415">
 </div>
+</div>
+</li>
+<li>
+<p>Loosen the lock nut of the access door and gently open the access door to
+prevent the dust from raising. Loosen the hook nut of the filter cartridge and
+remove the filter cartridge along the position where the hook is mounted.</p>
+</li>
+<li>
+<p>Blow the filter cartridge from inside to outside with the compressed air, and
+check for damage. Do not soak or flush the filter cartridge with water during
+cleaning.</p>
+</li>
+<li>
+<p>Install the filter cartridge along the hook installation position, tighten the
+hook nut of the filter cartridge, and close the access door.</p>
 </li>
 </ol>
 </div>
@@ -147,8 +151,7 @@
                 </div>
             </div>
             <nav class="pagination">
- <span class="prev"><a href="1000h.html">Check the safety door lock of the protective door</a></span>
- <span class="next"><a href="2000h1.html">Check the filter of dispatch</a></span>
+ <span class="prev"><a href="4000h.html">Check the guide carriage on the Z axe</a></span>
 </nav>
 
         </div>
