--- a/TRUMPF/maintenancetask/2000h10.html
+++ b/TRUMPF/maintenancetask/2000h10.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../res/sibling.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" type="image/x-icon" href="../img/trumpf-icon.png">
-  <title>Lubricating the fixing device on pallet changer</title>
+  <title>Clean the splash plate</title>
 </head>
 <body id="site-body" onload="sLoaded()">
     <header id="site-header">
@@ -43,7 +43,7 @@
     <li><button class="tree blank"></button><a href="500h4.html">Check the traction chain and drive pin</a></li>
     <li><button class="tree blank"></button><a href="500h5.html">Check the plate positioning clamp</a></li>
     <li><button class="tree blank"></button><a href="1000h.html">Check the safety door lock of the protective door</a></li>
-    <li><button class="tree blank"></button><a class="active" href="2000h.html">Lubricating the fixing device on pallet changer</a></li>
+    <li><button class="tree blank"></button><a href="2000h.html">Lubricating the fixing device on pallet changer</a></li>
     <li><button class="tree blank"></button><a href="2000h1.html">Check the filter of dispatch</a></li>
     <li><button class="tree blank"></button><a href="2000h2.html">Testing the input controller for operating pressure</a></li>
     <li><button class="tree blank"></button><a href="2000h3.html">Replace the filter of the compressed air device</a></li>
@@ -53,7 +53,7 @@
     <li><button class="tree blank"></button><a href="2000h7.html">Cleaning the racks on the X and Y axes</a></li>
     <li><button class="tree blank"></button><a href="2000h8.html">Check and clean the bellows on the X and Y axes</a></li>
     <li><button class="tree blank"></button><a href="2000h9.html">Clean the grease collecting tray</a></li>
-    <li><button class="tree blank"></button><a href="2000h10.html">Clean the splash plate</a></li>
+    <li><button class="tree blank"></button><a class="active" href="2000h10.html">Clean the splash plate</a></li>
     <li><button class="tree blank"></button><a href="2000h11.html">Checking the lubrication line for air pockets, and exhaust if necessary</a></li>
     <li><button class="tree blank"></button><a href="2000h12.html">Cleaning and lubricating the chain, cam and guide rail of the pallet transport unit</a></li>
     <li><button class="tree blank"></button><a href="2000h13.html">Check the track rollers and brushes at the pallet</a></li>
@@ -80,16 +80,14 @@
  </div>
  <div>/</div>
  <div>
-  <a href="2000h.html">Lubricating the fixing device on pallet changer</a>
+  <a href="2000h10.html">Clean the splash plate</a>
  </div>
 </nav>
 
             <div id="site-crumb-below">
                 <div id="site-toc-left">
                     <article id="article">
-                        <h1>Lubricating the fixing device on pallet changer</h1>
-<div id="preamble">
-<div class="sectionbody">
+                        <h1>Clean the splash plate</h1>
 <div class="paragraph">
 <div class="title">Trained Maintenance Personnel</div>
 <p><span class="image"><img src="img/trained.png" alt="Trained"></span></p>
@@ -99,56 +97,40 @@
 <p>2000 hours of operation</p>
 </div>
 <div class="paragraph">
-<div class="title">Means, Tools, Material</div>
-<p>Lubricant Dry Lube 400ml (0367578)</p>
-</div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_procedure">Procedure</h2>
-<div class="sectionbody">
-<div class="imageblock">
-<div class="content">
-<img src="img/2000h.png" alt="Fixing device on pallet changer" width="415">
-</div>
+<div class="title">Means, Tools, Materials</div>
+<p>Cleaning cloth</p>
 </div>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>Switch off the MAIN SWITCH, lock it and pull out the key.</p>
+<p>Shut down the machine properly, secure the MAIN SWITCH and secure with a padlock.</p>
 </li>
 <li>
-<p>Check and lubricate the fixing device.</p>
-<div class="ulist">
-<ul>
-<li>
-<p>If necessary, contact TRUMPF Technical Service.</p>
+<p>Detach the bellows of the left and right Y-axis guide.</p>
 </li>
-</ul>
+<li>
+<p>Open the cover of the cutting device.</p>
+<div class="imageblock">
+<div class="content">
+<img src="img/2000h10.png" alt="Splash plate location" width="415">
 </div>
+</div>
+</li>
+<li>
+<p>Clean the splash plate (1) with a cloth.</p>
 </li>
 </ol>
-</div>
-</div>
 </div>
 
                     </article>
                 </div>
                 <div id="site-toc-holder">
-                    <aside id="site-toc">
- <h3>Contents</h3>
- <ul>
-  <li level="1">
-   <a href="#_procedure">Procedure</a>
-  </li>
- </ul>
-</aside>
-
+                    <aside id="site-toc"></aside>
                 </div>
             </div>
             <nav class="pagination">
- <span class="prev"><a href="1000h.html">Check the safety door lock of the protective door</a></span>
- <span class="next"><a href="2000h1.html">Check the filter of dispatch</a></span>
+ <span class="prev"><a href="2000h9.html">Clean the grease collecting tray</a></span>
+ <span class="next"><a href="2000h11.html">Checking the lubrication line for air pockets, and exhaust if necessary</a></span>
 </nav>
 
         </div>
