--- a/TRUMPF/maintenancetask/2000h12.html
+++ b/TRUMPF/maintenancetask/2000h12.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../res/sibling.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" type="image/x-icon" href="../img/trumpf-icon.png">
-  <title>Lubricating the fixing device on pallet changer</title>
+  <title>Cleaning and lubricating the chain, cam and guide rail of the pallet transport unit</title>
 </head>
 <body id="site-body" onload="sLoaded()">
     <header id="site-header">
@@ -43,7 +43,7 @@
     <li><button class="tree blank"></button><a href="500h4.html">Check the traction chain and drive pin</a></li>
     <li><button class="tree blank"></button><a href="500h5.html">Check the plate positioning clamp</a></li>
     <li><button class="tree blank"></button><a href="1000h.html">Check the safety door lock of the protective door</a></li>
-    <li><button class="tree blank"></button><a class="active" href="2000h.html">Lubricating the fixing device on pallet changer</a></li>
+    <li><button class="tree blank"></button><a href="2000h.html">Lubricating the fixing device on pallet changer</a></li>
     <li><button class="tree blank"></button><a href="2000h1.html">Check the filter of dispatch</a></li>
     <li><button class="tree blank"></button><a href="2000h2.html">Testing the input controller for operating pressure</a></li>
     <li><button class="tree blank"></button><a href="2000h3.html">Replace the filter of the compressed air device</a></li>
@@ -55,7 +55,7 @@
     <li><button class="tree blank"></button><a href="2000h9.html">Clean the grease collecting tray</a></li>
     <li><button class="tree blank"></button><a href="2000h10.html">Clean the splash plate</a></li>
     <li><button class="tree blank"></button><a href="2000h11.html">Checking the lubrication line for air pockets, and exhaust if necessary</a></li>
-    <li><button class="tree blank"></button><a href="2000h12.html">Cleaning and lubricating the chain, cam and guide rail of the pallet transport unit</a></li>
+    <li><button class="tree blank"></button><a class="active" href="2000h12.html">Cleaning and lubricating the chain, cam and guide rail of the pallet transport unit</a></li>
     <li><button class="tree blank"></button><a href="2000h13.html">Check the track rollers and brushes at the pallet</a></li>
     <li><button class="tree blank"></button><a href="3000h.html">Change the cooling water</a></li>
     <li><button class="tree blank"></button><a href="3000h1.html">Measure the conductivity of the cooling water</a></li>
@@ -80,14 +80,14 @@
  </div>
  <div>/</div>
  <div>
-  <a href="2000h.html">Lubricating the fixing device on pallet changer</a>
+  <a href="2000h12.html">Cleaning and lubricating the chain, cam and guide rail of the pallet transport unit</a>
  </div>
 </nav>
 
             <div id="site-crumb-below">
                 <div id="site-toc-left">
                     <article id="article">
-                        <h1>Lubricating the fixing device on pallet changer</h1>
+                        <h1>Cleaning and lubricating the chain, cam and guide rail of the pallet transport unit</h1>
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
@@ -99,33 +99,42 @@
 <p>2000 hours of operation</p>
 </div>
 <div class="paragraph">
-<div class="title">Means, Tools, Material</div>
-<p>Lubricant Dry Lube 400ml (0367578)</p>
+<div class="title">Means, Tools, Materials</div>
+<p>Lubricant KLÜBER Microlube GB00 (mat. no. 0111780).</p>
+</div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+For lubrication, the lubricant listed is recommended or a proven
+equivalent lubricant from other mineral oil companies. Pay attention to the
+expiration date of the respective lubricant.
+</td>
+</tr>
+</table>
 </div>
 </div>
 </div>
 <div class="sect1">
 <h2 id="_procedure">Procedure</h2>
 <div class="sectionbody">
-<div class="imageblock">
-<div class="content">
-<img src="img/2000h.png" alt="Fixing device on pallet changer" width="415">
-</div>
-</div>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>Switch off the MAIN SWITCH, lock it and pull out the key.</p>
-</li>
-<li>
-<p>Check and lubricate the fixing device.</p>
-<div class="ulist">
-<ul>
-<li>
-<p>If necessary, contact TRUMPF Technical Service.</p>
-</li>
-</ul>
+<p>Turn the SAFETY-MODE key switch to position 1, remove the key and stow it away
+safely.</p>
+<div class="imageblock">
+<div class="content">
+<img src="img/2000h12.png" alt="Chain guide rail drive pin" width="415">
 </div>
+</div>
+</li>
+<li>
+<p>Clean the chain (1), the guide rail (2) and the drive pin (3) with a brush and
+lubricate them.</p>
 </li>
 </ol>
 </div>
@@ -147,8 +156,8 @@
                 </div>
             </div>
             <nav class="pagination">
- <span class="prev"><a href="1000h.html">Check the safety door lock of the protective door</a></span>
- <span class="next"><a href="2000h1.html">Check the filter of dispatch</a></span>
+ <span class="prev"><a href="2000h11.html">Checking the lubrication line for air pockets, and exhaust if necessary</a></span>
+ <span class="next"><a href="2000h13.html">Check the track rollers and brushes at the pallet</a></span>
 </nav>
 
         </div>
