--- a/TRUMPF/maintenancetask/2000h2.html
+++ b/TRUMPF/maintenancetask/2000h2.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../res/sibling.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" type="image/x-icon" href="../img/trumpf-icon.png">
-  <title>Lubricating the fixing device on pallet changer</title>
+  <title>Testing the input controller for operating pressure</title>
 </head>
 <body id="site-body" onload="sLoaded()">
     <header id="site-header">
@@ -43,9 +43,9 @@
     <li><button class="tree blank"></button><a href="500h4.html">Check the traction chain and drive pin</a></li>
     <li><button class="tree blank"></button><a href="500h5.html">Check the plate positioning clamp</a></li>
     <li><button class="tree blank"></button><a href="1000h.html">Check the safety door lock of the protective door</a></li>
-    <li><button class="tree blank"></button><a class="active" href="2000h.html">Lubricating the fixing device on pallet changer</a></li>
+    <li><button class="tree blank"></button><a href="2000h.html">Lubricating the fixing device on pallet changer</a></li>
     <li><button class="tree blank"></button><a href="2000h1.html">Check the filter of dispatch</a></li>
-    <li><button class="tree blank"></button><a href="2000h2.html">Testing the input controller for operating pressure</a></li>
+    <li><button class="tree blank"></button><a class="active" href="2000h2.html">Testing the input controller for operating pressure</a></li>
     <li><button class="tree blank"></button><a href="2000h3.html">Replace the filter of the compressed air device</a></li>
     <li><button class="tree blank"></button><a href="2000h4.html">Compressed air cutting - replace the filter element</a></li>
     <li><button class="tree blank"></button><a href="2000h5.html">Check the indicator light of the machine</a></li>
@@ -80,27 +80,23 @@
  </div>
  <div>/</div>
  <div>
-  <a href="2000h.html">Lubricating the fixing device on pallet changer</a>
+  <a href="2000h2.html">Testing the input controller for operating pressure</a>
  </div>
 </nav>
 
             <div id="site-crumb-below">
                 <div id="site-toc-left">
                     <article id="article">
-                        <h1>Lubricating the fixing device on pallet changer</h1>
+                        <h1>Testing the input controller for operating pressure</h1>
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<div class="title">Trained Maintenance Personnel</div>
-<p><span class="image"><img src="img/trained.png" alt="Trained"></span></p>
+<div class="title">Machine Operator</div>
+<p><span class="image"><img src="img/operator.png" alt="Operator"></span></p>
 </div>
 <div class="paragraph">
 <div class="title">Maintenance interval</div>
 <p>2000 hours of operation</p>
-</div>
-<div class="paragraph">
-<div class="title">Means, Tools, Material</div>
-<p>Lubricant Dry Lube 400ml (0367578)</p>
 </div>
 </div>
 </div>
@@ -109,23 +105,16 @@
 <div class="sectionbody">
 <div class="imageblock">
 <div class="content">
-<img src="img/2000h.png" alt="Fixing device on pallet changer" width="415">
+<img src="img/2000h2.png" alt="Pressure regulator input controller" width="415">
 </div>
 </div>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>Switch off the MAIN SWITCH, lock it and pull out the key.</p>
+<p>Check whether the value of the regulator (1) has been set to 5 bar+0.5 and adjust the pressure if the value is incorrect.</p>
 </li>
 <li>
-<p>Check and lubricate the fixing device.</p>
-<div class="ulist">
-<ul>
-<li>
-<p>If necessary, contact TRUMPF Technical Service.</p>
-</li>
-</ul>
-</div>
+<p>Check the condensate status.</p>
 </li>
 </ol>
 </div>
@@ -147,8 +136,8 @@
                 </div>
             </div>
             <nav class="pagination">
- <span class="prev"><a href="1000h.html">Check the safety door lock of the protective door</a></span>
- <span class="next"><a href="2000h1.html">Check the filter of dispatch</a></span>
+ <span class="prev"><a href="2000h1.html">Check the filter of dispatch</a></span>
+ <span class="next"><a href="2000h3.html">Replace the filter of the compressed air device</a></span>
 </nav>
 
         </div>
