--- a/TRUMPF/maintenancetask/2000h4.html
+++ b/TRUMPF/maintenancetask/2000h4.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../res/sibling.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" type="image/x-icon" href="../img/trumpf-icon.png">
-  <title>Lubricating the fixing device on pallet changer</title>
+  <title>Compressed air cutting - replace the filter element</title>
 </head>
 <body id="site-body" onload="sLoaded()">
     <header id="site-header">
@@ -43,11 +43,11 @@
     <li><button class="tree blank"></button><a href="500h4.html">Check the traction chain and drive pin</a></li>
     <li><button class="tree blank"></button><a href="500h5.html">Check the plate positioning clamp</a></li>
     <li><button class="tree blank"></button><a href="1000h.html">Check the safety door lock of the protective door</a></li>
-    <li><button class="tree blank"></button><a class="active" href="2000h.html">Lubricating the fixing device on pallet changer</a></li>
+    <li><button class="tree blank"></button><a href="2000h.html">Lubricating the fixing device on pallet changer</a></li>
     <li><button class="tree blank"></button><a href="2000h1.html">Check the filter of dispatch</a></li>
     <li><button class="tree blank"></button><a href="2000h2.html">Testing the input controller for operating pressure</a></li>
     <li><button class="tree blank"></button><a href="2000h3.html">Replace the filter of the compressed air device</a></li>
-    <li><button class="tree blank"></button><a href="2000h4.html">Compressed air cutting - replace the filter element</a></li>
+    <li><button class="tree blank"></button><a class="active" href="2000h4.html">Compressed air cutting - replace the filter element</a></li>
     <li><button class="tree blank"></button><a href="2000h5.html">Check the indicator light of the machine</a></li>
     <li><button class="tree blank"></button><a href="2000h6.html">Clean the guideway, front seal and strippers of the X, Y and Z axes</a></li>
     <li><button class="tree blank"></button><a href="2000h7.html">Cleaning the racks on the X and Y axes</a></li>
@@ -80,14 +80,14 @@
  </div>
  <div>/</div>
  <div>
-  <a href="2000h.html">Lubricating the fixing device on pallet changer</a>
+  <a href="2000h4.html">Compressed air cutting - replace the filter element</a>
  </div>
 </nav>
 
             <div id="site-crumb-below">
                 <div id="site-toc-left">
                     <article id="article">
-                        <h1>Lubricating the fixing device on pallet changer</h1>
+                        <h1>Compressed air cutting - replace the filter element</h1>
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
@@ -98,10 +98,6 @@
 <div class="title">Maintenance interval</div>
 <p>2000 hours of operation</p>
 </div>
-<div class="paragraph">
-<div class="title">Means, Tools, Material</div>
-<p>Lubricant Dry Lube 400ml (0367578)</p>
-</div>
 </div>
 </div>
 <div class="sect1">
@@ -109,23 +105,25 @@
 <div class="sectionbody">
 <div class="imageblock">
 <div class="content">
-<img src="img/2000h.png" alt="Fixing device on pallet changer" width="415">
+<img src="img/2000h4.png" alt="Compressed air device filter replacement" width="415">
 </div>
 </div>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>Switch off the MAIN SWITCH, lock it and pull out the key.</p>
+<p>Shut down the machine properly, switch off the MAIN SWITCH, lock it and remove the key.</p>
 </li>
 <li>
-<p>Check and lubricate the fixing device.</p>
-<div class="ulist">
-<ul>
-<li>
-<p>If necessary, contact TRUMPF Technical Service.</p>
+<p>Close the compressed air delivery on the reversing valve (1).</p>
 </li>
-</ul>
-</div>
+<li>
+<p>Unscrew the housings of filter CK70 (2) (material number: 0369322) and filter CK50 (3) (material number: 0369323).</p>
+</li>
+<li>
+<p>Replace the filter element.</p>
+</li>
+<li>
+<p>Assemble the filter housing.</p>
 </li>
 </ol>
 </div>
@@ -147,8 +145,8 @@
                 </div>
             </div>
             <nav class="pagination">
- <span class="prev"><a href="1000h.html">Check the safety door lock of the protective door</a></span>
- <span class="next"><a href="2000h1.html">Check the filter of dispatch</a></span>
+ <span class="prev"><a href="2000h3.html">Replace the filter of the compressed air device</a></span>
+ <span class="next"><a href="2000h5.html">Check the indicator light of the machine</a></span>
 </nav>
 
         </div>
