--- a/TRUMPF/maintenancetask/2000h6.html
+++ b/TRUMPF/maintenancetask/2000h6.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../res/sibling.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" type="image/x-icon" href="../img/trumpf-icon.png">
-  <title>Lubricating the fixing device on pallet changer</title>
+  <title>Clean the guideway, front seal and strippers of the X, Y and Z axes</title>
 </head>
 <body id="site-body" onload="sLoaded()">
     <header id="site-header">
@@ -43,13 +43,13 @@
     <li><button class="tree blank"></button><a href="500h4.html">Check the traction chain and drive pin</a></li>
     <li><button class="tree blank"></button><a href="500h5.html">Check the plate positioning clamp</a></li>
     <li><button class="tree blank"></button><a href="1000h.html">Check the safety door lock of the protective door</a></li>
-    <li><button class="tree blank"></button><a class="active" href="2000h.html">Lubricating the fixing device on pallet changer</a></li>
+    <li><button class="tree blank"></button><a href="2000h.html">Lubricating the fixing device on pallet changer</a></li>
     <li><button class="tree blank"></button><a href="2000h1.html">Check the filter of dispatch</a></li>
     <li><button class="tree blank"></button><a href="2000h2.html">Testing the input controller for operating pressure</a></li>
     <li><button class="tree blank"></button><a href="2000h3.html">Replace the filter of the compressed air device</a></li>
     <li><button class="tree blank"></button><a href="2000h4.html">Compressed air cutting - replace the filter element</a></li>
     <li><button class="tree blank"></button><a href="2000h5.html">Check the indicator light of the machine</a></li>
-    <li><button class="tree blank"></button><a href="2000h6.html">Clean the guideway, front seal and strippers of the X, Y and Z axes</a></li>
+    <li><button class="tree blank"></button><a class="active" href="2000h6.html">Clean the guideway, front seal and strippers of the X, Y and Z axes</a></li>
     <li><button class="tree blank"></button><a href="2000h7.html">Cleaning the racks on the X and Y axes</a></li>
     <li><button class="tree blank"></button><a href="2000h8.html">Check and clean the bellows on the X and Y axes</a></li>
     <li><button class="tree blank"></button><a href="2000h9.html">Clean the grease collecting tray</a></li>
@@ -80,27 +80,36 @@
  </div>
  <div>/</div>
  <div>
-  <a href="2000h.html">Lubricating the fixing device on pallet changer</a>
+  <a href="2000h6.html">Clean the guideway, front seal and strippers of the X, Y and Z axes</a>
  </div>
 </nav>
 
             <div id="site-crumb-below">
                 <div id="site-toc-left">
                     <article id="article">
-                        <h1>Lubricating the fixing device on pallet changer</h1>
+                        <h1>Clean the guideway, front seal and strippers of the X, Y and Z axes</h1>
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<div class="title">Trained Maintenance Personnel</div>
-<p><span class="image"><img src="img/trained.png" alt="Trained"></span></p>
+<div class="title">Machine Operator</div>
+<p><span class="image"><img src="img/operator.png" alt="Operator"></span></p>
 </div>
 <div class="paragraph">
 <div class="title">Maintenance interval</div>
 <p>2000 hours of operation</p>
 </div>
 <div class="paragraph">
-<div class="title">Means, Tools, Material</div>
-<p>Lubricant Dry Lube 400ml (0367578)</p>
+<p>The motors on the X, Y and Z axes, the guide rail cover, the cover and the
+scraper on the Y axis must be inspected and cleaned.</p>
+</div>
+<div class="paragraph">
+<div class="title">Condition</div>
+<p>Switch off the machine in the correct way, switch off the MAIN
+SWITCH, lock it, and remove the key.</p>
+</div>
+<div class="paragraph">
+<div class="title">Means, Tools, Materials</div>
+<p>Slightly oiled cloth for the guideways.</p>
 </div>
 </div>
 </div>
@@ -109,23 +118,84 @@
 <div class="sectionbody">
 <div class="imageblock">
 <div class="content">
-<img src="img/2000h.png" alt="Fixing device on pallet changer" width="415">
+<img src="img/danger.png" alt="Danger">
+</div>
+</div>
+<div class="exampleblock">
+<div class="content">
+<div class="paragraph">
+<p><strong>Risk of injury caused by axes moving at uncontrolled speed!</strong><br></p>
+</div>
+<div class="paragraph">
+<p><strong>In the event of an error, the linear axes may move at uncontrolled speeds against the fixed stops.</strong></p>
+</div>
+<div class="paragraph">
+<p>Switch off the machine during the cleaning work.</p>
+</div>
 </div>
 </div>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>Switch off the MAIN SWITCH, lock it and pull out the key.</p>
+<p>Move the Y/Z slider to the right.</p>
+<div class="imageblock">
+<div class="content">
+<img src="img/2000h6.png" alt="Y/Z slider" width="415">
+</div>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="img/2000h6-1.png" alt="Y/Z slider detail" width="415">
+</div>
+</div>
 </li>
 <li>
-<p>Check and lubricate the fixing device.</p>
+<p>Detach the bellows on the right Y axis.</p>
+</li>
+<li>
+<p>Push the bellows to the left to expose the Y guide (1).</p>
+<div class="imageblock">
+<div class="content">
+<img src="img/2000h6-2.png" alt="Y guide cleaning" width="415">
+</div>
+</div>
+</li>
+<li>
+<p>Thoroughly clean the Y guide in the open area of the bellows by gently wiping with an oil-soaked cloth.</p>
+</li>
+<li>
+<p>Check the front seal for damaged sealing lip and replace, if necessary.</p>
+</li>
+<li>
+<p>Reinstall the bellows.</p>
+</li>
+<li>
+<p>Move the Y /Z slider to the left.</p>
+</li>
+<li>
+<p>Detach the bellows of the left Y guiding element.</p>
+</li>
+<li>
+<p>Push the bellows to the right to expose the Y guide.</p>
+</li>
+<li>
+<p>Thoroughly clean the Y guide in the open area of the bellows with an oil-soaked cloth.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>If necessary, contact TRUMPF Technical Service.</p>
+<p>The cleaning ends when the whole length of Y-axis has been cleaned.</p>
 </li>
 </ul>
 </div>
+</li>
+<li>
+<p>Check the front seal for damaged sealing lip and replace it if necessary.</p>
+</li>
+<li>
+<p>Reinstall the bellows.</p>
+</li>
+<li>
+<p>The same method applies to the X and Z axes.</p>
 </li>
 </ol>
 </div>
@@ -147,8 +217,8 @@
                 </div>
             </div>
             <nav class="pagination">
- <span class="prev"><a href="1000h.html">Check the safety door lock of the protective door</a></span>
- <span class="next"><a href="2000h1.html">Check the filter of dispatch</a></span>
+ <span class="prev"><a href="2000h5.html">Check the indicator light of the machine</a></span>
+ <span class="next"><a href="2000h7.html">Cleaning the racks on the X and Y axes</a></span>
 </nav>
 
         </div>
