--- a/TRUMPF/maintenancetask/2000h8.html
+++ b/TRUMPF/maintenancetask/2000h8.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../res/sibling.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" type="image/x-icon" href="../img/trumpf-icon.png">
-  <title>Lubricating the fixing device on pallet changer</title>
+  <title>Check and clean the bellows on the X and Y axes</title>
 </head>
 <body id="site-body" onload="sLoaded()">
     <header id="site-header">
@@ -43,7 +43,7 @@
     <li><button class="tree blank"></button><a href="500h4.html">Check the traction chain and drive pin</a></li>
     <li><button class="tree blank"></button><a href="500h5.html">Check the plate positioning clamp</a></li>
     <li><button class="tree blank"></button><a href="1000h.html">Check the safety door lock of the protective door</a></li>
-    <li><button class="tree blank"></button><a class="active" href="2000h.html">Lubricating the fixing device on pallet changer</a></li>
+    <li><button class="tree blank"></button><a href="2000h.html">Lubricating the fixing device on pallet changer</a></li>
     <li><button class="tree blank"></button><a href="2000h1.html">Check the filter of dispatch</a></li>
     <li><button class="tree blank"></button><a href="2000h2.html">Testing the input controller for operating pressure</a></li>
     <li><button class="tree blank"></button><a href="2000h3.html">Replace the filter of the compressed air device</a></li>
@@ -51,7 +51,7 @@
     <li><button class="tree blank"></button><a href="2000h5.html">Check the indicator light of the machine</a></li>
     <li><button class="tree blank"></button><a href="2000h6.html">Clean the guideway, front seal and strippers of the X, Y and Z axes</a></li>
     <li><button class="tree blank"></button><a href="2000h7.html">Cleaning the racks on the X and Y axes</a></li>
-    <li><button class="tree blank"></button><a href="2000h8.html">Check and clean the bellows on the X and Y axes</a></li>
+    <li><button class="tree blank"></button><a class="active" href="2000h8.html">Check and clean the bellows on the X and Y axes</a></li>
     <li><button class="tree blank"></button><a href="2000h9.html">Clean the grease collecting tray</a></li>
     <li><button class="tree blank"></button><a href="2000h10.html">Clean the splash plate</a></li>
     <li><button class="tree blank"></button><a href="2000h11.html">Checking the lubrication line for air pockets, and exhaust if necessary</a></li>
@@ -80,52 +80,54 @@
  </div>
  <div>/</div>
  <div>
-  <a href="2000h.html">Lubricating the fixing device on pallet changer</a>
+  <a href="2000h8.html">Check and clean the bellows on the X and Y axes</a>
  </div>
 </nav>
 
             <div id="site-crumb-below">
                 <div id="site-toc-left">
                     <article id="article">
-                        <h1>Lubricating the fixing device on pallet changer</h1>
+                        <h1>Check and clean the bellows on the X and Y axes</h1>
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<div class="title">Trained Maintenance Personnel</div>
-<p><span class="image"><img src="img/trained.png" alt="Trained"></span></p>
+<div class="title">Machine Operator</div>
+<p><span class="image"><img src="img/operator.png" alt="Operator"></span></p>
 </div>
 <div class="paragraph">
 <div class="title">Maintenance interval</div>
 <p>2000 hours of operation</p>
 </div>
 <div class="paragraph">
-<div class="title">Means, Tools, Material</div>
-<p>Lubricant Dry Lube 400ml (0367578)</p>
+<div class="title">Means, Tools, Materials</div>
+<p>Industrial vacuum cleaner "Dust class M" or "Dust class
+H" in accordance with IEC/EN 60335-2-69 or similar.</p>
 </div>
 </div>
 </div>
 <div class="sect1">
 <h2 id="_procedure">Procedure</h2>
 <div class="sectionbody">
-<div class="imageblock">
-<div class="content">
-<img src="img/2000h.png" alt="Fixing device on pallet changer" width="415">
-</div>
-</div>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>Switch off the MAIN SWITCH, lock it and pull out the key.</p>
-</li>
-<li>
-<p>Check and lubricate the fixing device.</p>
-<div class="ulist">
-<ul>
-<li>
-<p>If necessary, contact TRUMPF Technical Service.</p>
-</li>
-</ul>
+<p>Check the bellows for damage such as cracks or holes, and for stability.</p>
+<div class="imageblock">
+<div class="content">
+<img src="img/2000h8.png" alt="Bellows inspection" width="415">
 </div>
+</div>
+</li>
+<li>
+<p>Remove the dust from the bellows with an industrial vacuum cleaner.</p>
+<div class="imageblock">
+<div class="content">
+<img src="img/2000h8-1.png" alt="Bellows cleaning" width="415">
+</div>
+</div>
+</li>
+<li>
+<p>If the protective cover is seriously damaged, please inform TRUMPF&#8217;s maintenance service department.</p>
 </li>
 </ol>
 </div>
@@ -147,8 +149,8 @@
                 </div>
             </div>
             <nav class="pagination">
- <span class="prev"><a href="1000h.html">Check the safety door lock of the protective door</a></span>
- <span class="next"><a href="2000h1.html">Check the filter of dispatch</a></span>
+ <span class="prev"><a href="2000h7.html">Cleaning the racks on the X and Y axes</a></span>
+ <span class="next"><a href="2000h9.html">Clean the grease collecting tray</a></span>
 </nav>
 
         </div>
