--- a/TRUMPF/maintenancetask/3000h.html
+++ b/TRUMPF/maintenancetask/3000h.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../res/sibling.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" type="image/x-icon" href="../img/trumpf-icon.png">
-  <title>Lubricating the fixing device on pallet changer</title>
+  <title>Change the cooling water</title>
 </head>
 <body id="site-body" onload="sLoaded()">
     <header id="site-header">
@@ -43,7 +43,7 @@
     <li><button class="tree blank"></button><a href="500h4.html">Check the traction chain and drive pin</a></li>
     <li><button class="tree blank"></button><a href="500h5.html">Check the plate positioning clamp</a></li>
     <li><button class="tree blank"></button><a href="1000h.html">Check the safety door lock of the protective door</a></li>
-    <li><button class="tree blank"></button><a class="active" href="2000h.html">Lubricating the fixing device on pallet changer</a></li>
+    <li><button class="tree blank"></button><a href="2000h.html">Lubricating the fixing device on pallet changer</a></li>
     <li><button class="tree blank"></button><a href="2000h1.html">Check the filter of dispatch</a></li>
     <li><button class="tree blank"></button><a href="2000h2.html">Testing the input controller for operating pressure</a></li>
     <li><button class="tree blank"></button><a href="2000h3.html">Replace the filter of the compressed air device</a></li>
@@ -57,7 +57,7 @@
     <li><button class="tree blank"></button><a href="2000h11.html">Checking the lubrication line for air pockets, and exhaust if necessary</a></li>
     <li><button class="tree blank"></button><a href="2000h12.html">Cleaning and lubricating the chain, cam and guide rail of the pallet transport unit</a></li>
     <li><button class="tree blank"></button><a href="2000h13.html">Check the track rollers and brushes at the pallet</a></li>
-    <li><button class="tree blank"></button><a href="3000h.html">Change the cooling water</a></li>
+    <li><button class="tree blank"></button><a class="active" href="3000h.html">Change the cooling water</a></li>
     <li><button class="tree blank"></button><a href="3000h1.html">Measure the conductivity of the cooling water</a></li>
     <li><button class="tree blank"></button><a href="3000h2.html">Testing EMERGENCY STOP push-button</a></li>
     <li><button class="tree blank"></button><a href="4000h.html">Check the guide carriage on the Z axe</a></li>
@@ -80,14 +80,14 @@
  </div>
  <div>/</div>
  <div>
-  <a href="2000h.html">Lubricating the fixing device on pallet changer</a>
+  <a href="3000h.html">Change the cooling water</a>
  </div>
 </nav>
 
             <div id="site-crumb-below">
                 <div id="site-toc-left">
                     <article id="article">
-                        <h1>Lubricating the fixing device on pallet changer</h1>
+                        <h1>Change the cooling water</h1>
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
@@ -96,36 +96,207 @@
 </div>
 <div class="paragraph">
 <div class="title">Maintenance interval</div>
-<p>2000 hours of operation</p>
+<p>3000 hours of operation</p>
 </div>
 <div class="paragraph">
-<div class="title">Means, Tools, Material</div>
-<p>Lubricant Dry Lube 400ml (0367578)</p>
+<div class="title">Condition</div>
+<p>The cooling circulation system should be washed repeatedly 2 hours
+before the replacement of the cooling water, and then the cooling water should
+be injected.</p>
 </div>
+<div class="olist arabic">
+<div class="title">Means, Tools, Materials</div>
+<ol class="arabic">
+<li>
+<p>Clean wiping cloth</p>
+</li>
+<li>
+<p>Safety glasses</p>
+</li>
+<li>
+<p>Protective gloves</p>
+</li>
+<li>
+<p>Conductivity measuring instrument</p>
+</li>
+<li>
+<p>Industrial vacuum cleaners with "dust level M" or "dust level H" conforming to IEC/EN 60335-2-69 or equivalent standard.</p>
+</li>
+<li>
+<p>Water collecting container</p>
+</li>
+</ol>
+</div>
+<table class="tableblock frame-all grid-all fit-content">
+<colgroup>
+<col>
+<col>
+<col>
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-left valign-top">Laser</th>
+<th class="tableblock halign-left valign-top">Capacity of cooling cycle (sum of tank and hoses), unit: l (gal)</th>
+<th class="tableblock halign-left valign-top">Cooling water requirements</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">TruFiber 3001/6001/12001 (FD91)</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">80-199 (21.13 – 52.57)</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">DI water &lt; 100μm
+Pure ethylene glycol with volume ratio of 5%-10% is used as microbial inhibitor
+and antifreeze TRUMPF recommends a concentration of 25 % by volume to protect
+against freezing to -10 °C with a minimal drop in thermal performance while also
+providing corrosion protection and serving as a bactericide</p></td>
+</tr>
+</tbody>
+</table>
 </div>
 </div>
 <div class="sect1">
 <h2 id="_procedure">Procedure</h2>
 <div class="sectionbody">
-<div class="imageblock">
-<div class="content">
-<img src="img/2000h.png" alt="Fixing device on pallet changer" width="415">
-</div>
+<div class="paragraph">
+<p><strong>Start the cleaning cycle:</strong></p>
 </div>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>Switch off the MAIN SWITCH, lock it and pull out the key.</p>
+<p>Switch off the MAIN SWITCH of the machine.</p>
 </li>
 <li>
-<p>Check and lubricate the fixing device.</p>
+<p>Put on personal protective equipment before contact with</p>
+</li>
+<li>
+<p>Cooling water additives and cooling water:</p>
 <div class="ulist">
 <ul>
 <li>
-<p>If necessary, contact TRUMPF Technical Service.</p>
+<p>Wear safety glasses.</p>
+</li>
+<li>
+<p>Put on short protective gloves.</p>
 </li>
 </ul>
 </div>
+</li>
+<li>
+<p>Open the process cooler on a longitudinal side.</p>
+</li>
+</ol>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="img/warning.png" alt="Warning">
+</div>
+</div>
+<div class="exampleblock">
+<div class="content">
+<div class="paragraph">
+<p><strong>Aggressive cooling water additives in cooling water!</strong></p>
+</div>
+<div class="paragraph">
+<p><strong>Chemical burns on eyes, skin, mucous membranes and digestive tract.</strong></p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Wear safety glasses and protective gloves.</p>
+</li>
+<li>
+<p>Avoid direct contact with eyes and skin.</p>
+</li>
+<li>
+<p>Do not swallow cooling water and microbial cleaner.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="olist arabic">
+<ol class="arabic" start="5">
+<li>
+<p>Open the cooling water tank, add anti-microbial additives to the water, and close the water tank and process cooler again.</p>
+<div class="imageblock">
+<div class="content">
+<img src="img/3000h.png" alt="Cooling water tank" width="415">
+</div>
+</div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+The circulation flow must be cooled during the cleaning cycle.
+</td>
+</tr>
+</table>
+</div>
+</li>
+<li>
+<p>Reconnect the machine tool and drive device. Continue production in the cleaning cycle.</p>
+</li>
+<li>
+<p>The cleaning cycle ends two hours later.</p>
+</li>
+</ol>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="img/warning.png" alt="Warning">
+</div>
+</div>
+<div class="exampleblock">
+<div class="content">
+<div class="paragraph">
+<p><strong>Aggressive cooling water additives in cooling water!</strong></p>
+</div>
+<div class="paragraph">
+<p><strong>Chemical burns on eyes, skin, mucous membranes and digestive tract.</strong></p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Wear safety glasses and protective gloves.</p>
+</li>
+<li>
+<p>Avoid direct contact with eyes and skin.</p>
+</li>
+<li>
+<p>Do not swallow cooling water and microbial cleaner.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="olist arabic">
+<ol class="arabic" start="8">
+<li>
+<p>Drain the water completely.</p>
+</li>
+<li>
+<p>Fill the water tank with 100% cooling water according to the above table.</p>
+<div class="paragraph">
+<p><strong>Measure the conductivity:</strong></p>
+</div>
+</li>
+<li>
+<p>The cooling water must be measured for conductivity every time it is replaced! See <a href="3000h1.html">Measure the conductivity of the cooling water</a> procedure.</p>
+<div class="paragraph">
+<p><strong>Adding anticorrosive agent and cleaning biocide:</strong></p>
+</div>
+</li>
+<li>
+<p>Add microbial inhibitors (antifreeze if needed) and wait 10 minutes before running the machine (pump must be in running status).</p>
+</li>
+<li>
+<p>After the replacement of cooling water, tighten the water inlet.</p>
+</li>
+<li>
+<p>Restart the process cooler and record the replacement of cooling water.</p>
 </li>
 </ol>
 </div>
@@ -147,8 +318,8 @@
                 </div>
             </div>
             <nav class="pagination">
- <span class="prev"><a href="1000h.html">Check the safety door lock of the protective door</a></span>
- <span class="next"><a href="2000h1.html">Check the filter of dispatch</a></span>
+ <span class="prev"><a href="2000h13.html">Check the track rollers and brushes at the pallet</a></span>
+ <span class="next"><a href="3000h1.html">Measure the conductivity of the cooling water</a></span>
 </nav>
 
         </div>
