--- a/TRUMPF/maintenancetask/3000h1.html
+++ b/TRUMPF/maintenancetask/3000h1.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../res/sibling.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" type="image/x-icon" href="../img/trumpf-icon.png">
-  <title>Lubricating the fixing device on pallet changer</title>
+  <title>Measure the conductivity of the cooling water</title>
 </head>
 <body id="site-body" onload="sLoaded()">
     <header id="site-header">
@@ -43,7 +43,7 @@
     <li><button class="tree blank"></button><a href="500h4.html">Check the traction chain and drive pin</a></li>
     <li><button class="tree blank"></button><a href="500h5.html">Check the plate positioning clamp</a></li>
     <li><button class="tree blank"></button><a href="1000h.html">Check the safety door lock of the protective door</a></li>
-    <li><button class="tree blank"></button><a class="active" href="2000h.html">Lubricating the fixing device on pallet changer</a></li>
+    <li><button class="tree blank"></button><a href="2000h.html">Lubricating the fixing device on pallet changer</a></li>
     <li><button class="tree blank"></button><a href="2000h1.html">Check the filter of dispatch</a></li>
     <li><button class="tree blank"></button><a href="2000h2.html">Testing the input controller for operating pressure</a></li>
     <li><button class="tree blank"></button><a href="2000h3.html">Replace the filter of the compressed air device</a></li>
@@ -58,7 +58,7 @@
     <li><button class="tree blank"></button><a href="2000h12.html">Cleaning and lubricating the chain, cam and guide rail of the pallet transport unit</a></li>
     <li><button class="tree blank"></button><a href="2000h13.html">Check the track rollers and brushes at the pallet</a></li>
     <li><button class="tree blank"></button><a href="3000h.html">Change the cooling water</a></li>
-    <li><button class="tree blank"></button><a href="3000h1.html">Measure the conductivity of the cooling water</a></li>
+    <li><button class="tree blank"></button><a class="active" href="3000h1.html">Measure the conductivity of the cooling water</a></li>
     <li><button class="tree blank"></button><a href="3000h2.html">Testing EMERGENCY STOP push-button</a></li>
     <li><button class="tree blank"></button><a href="4000h.html">Check the guide carriage on the Z axe</a></li>
     <li><button class="tree blank"></button><a href="7000h.html">Replace the filter cartridge</a></li>
@@ -80,52 +80,76 @@
  </div>
  <div>/</div>
  <div>
-  <a href="2000h.html">Lubricating the fixing device on pallet changer</a>
+  <a href="3000h1.html">Measure the conductivity of the cooling water</a>
  </div>
 </nav>
 
             <div id="site-crumb-below">
                 <div id="site-toc-left">
                     <article id="article">
-                        <h1>Lubricating the fixing device on pallet changer</h1>
+                        <h1>Measure the conductivity of the cooling water</h1>
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<div class="title">Trained Maintenance Personnel</div>
-<p><span class="image"><img src="img/trained.png" alt="Trained"></span></p>
+<div class="title">Technical Service</div>
+<p><span class="image"><img src="img/service.png" alt="Technical Service"></span></p>
 </div>
 <div class="paragraph">
 <div class="title">Maintenance interval</div>
-<p>2000 hours of operation</p>
+<p>3000 hours of operation (or) After replacement of cooling water</p>
 </div>
-<div class="paragraph">
-<div class="title">Means, Tools, Material</div>
-<p>Lubricant Dry Lube 400ml (0367578)</p>
+<table class="tableblock frame-all grid-all fit-content">
+<colgroup>
+<col>
+<col>
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-left valign-top">Laser</th>
+<th class="tableblock halign-left valign-top">Conductivity of cooling water</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">TruFiber G 3001/ 6001/12001 (FD91)</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">&lt;45 μScm-1 (25℃)</p></td>
+</tr>
+</tbody>
+</table>
+<div class="olist arabic">
+<div class="title">Condition</div>
+<ol class="arabic">
+<li>
+<p>Check the conductivity of the cooling water in the tank regularly annually.</p>
+</li>
+<li>
+<p>The cooling water must be measured for conductivity every time it.  is replaced.</p>
+</li>
+</ol>
 </div>
 </div>
 </div>
 <div class="sect1">
 <h2 id="_procedure">Procedure</h2>
 <div class="sectionbody">
-<div class="imageblock">
-<div class="content">
-<img src="img/2000h.png" alt="Fixing device on pallet changer" width="415">
-</div>
-</div>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>Switch off the MAIN SWITCH, lock it and pull out the key.</p>
-</li>
-<li>
-<p>Check and lubricate the fixing device.</p>
+<p>Measure the conductivity of cooling water. If the conductivity meets the
+requirements, the water is clear and there is no suspended matter, then the
+measurement is finished.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>If necessary, contact TRUMPF Technical Service.</p>
+<p>If the conductivity of the water is not within the required range, or the
+water is not clear and contains suspended matter, rinse the cooling circulation
+loop again.</p>
 </li>
 </ul>
 </div>
+</li>
+<li>
+<p>Cover the process cooler. Restart the process cooler.</p>
 </li>
 </ol>
 </div>
@@ -147,8 +171,8 @@
                 </div>
             </div>
             <nav class="pagination">
- <span class="prev"><a href="1000h.html">Check the safety door lock of the protective door</a></span>
- <span class="next"><a href="2000h1.html">Check the filter of dispatch</a></span>
+ <span class="prev"><a href="3000h.html">Change the cooling water</a></span>
+ <span class="next"><a href="3000h2.html">Testing EMERGENCY STOP push-button</a></span>
 </nav>
 
         </div>
