--- a/TRUMPF/maintenancetask/4000h.html
+++ b/TRUMPF/maintenancetask/4000h.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../res/sibling.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" type="image/x-icon" href="../img/trumpf-icon.png">
-  <title>Lubricating the fixing device on pallet changer</title>
+  <title>Check the guide carriage on the Z axe</title>
 </head>
 <body id="site-body" onload="sLoaded()">
     <header id="site-header">
@@ -43,7 +43,7 @@
     <li><button class="tree blank"></button><a href="500h4.html">Check the traction chain and drive pin</a></li>
     <li><button class="tree blank"></button><a href="500h5.html">Check the plate positioning clamp</a></li>
     <li><button class="tree blank"></button><a href="1000h.html">Check the safety door lock of the protective door</a></li>
-    <li><button class="tree blank"></button><a class="active" href="2000h.html">Lubricating the fixing device on pallet changer</a></li>
+    <li><button class="tree blank"></button><a href="2000h.html">Lubricating the fixing device on pallet changer</a></li>
     <li><button class="tree blank"></button><a href="2000h1.html">Check the filter of dispatch</a></li>
     <li><button class="tree blank"></button><a href="2000h2.html">Testing the input controller for operating pressure</a></li>
     <li><button class="tree blank"></button><a href="2000h3.html">Replace the filter of the compressed air device</a></li>
@@ -60,7 +60,7 @@
     <li><button class="tree blank"></button><a href="3000h.html">Change the cooling water</a></li>
     <li><button class="tree blank"></button><a href="3000h1.html">Measure the conductivity of the cooling water</a></li>
     <li><button class="tree blank"></button><a href="3000h2.html">Testing EMERGENCY STOP push-button</a></li>
-    <li><button class="tree blank"></button><a href="4000h.html">Check the guide carriage on the Z axe</a></li>
+    <li><button class="tree blank"></button><a class="active" href="4000h.html">Check the guide carriage on the Z axe</a></li>
     <li><button class="tree blank"></button><a href="7000h.html">Replace the filter cartridge</a></li>
    </ul>
   </li>
@@ -80,14 +80,14 @@
  </div>
  <div>/</div>
  <div>
-  <a href="2000h.html">Lubricating the fixing device on pallet changer</a>
+  <a href="4000h.html">Check the guide carriage on the Z axe</a>
  </div>
 </nav>
 
             <div id="site-crumb-below">
                 <div id="site-toc-left">
                     <article id="article">
-                        <h1>Lubricating the fixing device on pallet changer</h1>
+                        <h1>Check the guide carriage on the Z axe</h1>
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
@@ -96,11 +96,7 @@
 </div>
 <div class="paragraph">
 <div class="title">Maintenance interval</div>
-<p>2000 hours of operation</p>
-</div>
-<div class="paragraph">
-<div class="title">Means, Tools, Material</div>
-<p>Lubricant Dry Lube 400ml (0367578)</p>
+<p>4000 hours of operation</p>
 </div>
 </div>
 </div>
@@ -109,25 +105,15 @@
 <div class="sectionbody">
 <div class="imageblock">
 <div class="content">
-<img src="img/2000h.png" alt="Fixing device on pallet changer" width="415">
+<img src="img/4000h.png" alt="Guide carriage on the Z axe" width="415">
 </div>
 </div>
-<div class="olist arabic">
-<ol class="arabic">
-<li>
-<p>Switch off the MAIN SWITCH, lock it and pull out the key.</p>
-</li>
-<li>
-<p>Check and lubricate the fixing device.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>If necessary, contact TRUMPF Technical Service.</p>
+<p>Check the damage of the carriage on Z axe.</p>
 </li>
 </ul>
-</div>
-</li>
-</ol>
 </div>
 </div>
 </div>
@@ -147,8 +133,8 @@
                 </div>
             </div>
             <nav class="pagination">
- <span class="prev"><a href="1000h.html">Check the safety door lock of the protective door</a></span>
- <span class="next"><a href="2000h1.html">Check the filter of dispatch</a></span>
+ <span class="prev"><a href="3000h2.html">Testing EMERGENCY STOP push-button</a></span>
+ <span class="next"><a href="7000h.html">Replace the filter cartridge</a></span>
 </nav>
 
         </div>
