--- a/TRUMPF/maintenancetask/500h3.html
+++ b/TRUMPF/maintenancetask/500h3.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../res/sibling.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" type="image/x-icon" href="../img/trumpf-icon.png">
-  <title>Clean the calibration plate and nozzle cleaning</title>
+  <title>Clean the calibration plate and nozzle cleaning brushes</title>
 </head>
 <body id="site-body" onload="sLoaded()">
     <header id="site-header">
@@ -39,12 +39,29 @@
     <li><button class="tree blank"></button><a href="500h.html">Check the purging valve</a></li>
     <li><button class="tree blank"></button><a href="500h1.html">Compressed air cutting - replace the activated carbon filter</a></li>
     <li><button class="tree blank"></button><a href="500h2.html">Check the pre-filter element and replace it if necessary</a></li>
-    <li><button class="tree blank"></button><a class="active" href="500h3.html">Clean the calibration plate and nozzle cleaning</a></li>
+    <li><button class="tree blank"></button><a class="active" href="500h3.html">Clean the calibration plate and nozzle cleaning brushes</a></li>
     <li><button class="tree blank"></button><a href="500h4.html">Check the traction chain and drive pin</a></li>
     <li><button class="tree blank"></button><a href="500h5.html">Check the plate positioning clamp</a></li>
     <li><button class="tree blank"></button><a href="1000h.html">Check the safety door lock of the protective door</a></li>
     <li><button class="tree blank"></button><a href="2000h.html">Lubricating the fixing device on pallet changer</a></li>
     <li><button class="tree blank"></button><a href="2000h1.html">Check the filter of dispatch</a></li>
+    <li><button class="tree blank"></button><a href="2000h2.html">Testing the input controller for operating pressure</a></li>
+    <li><button class="tree blank"></button><a href="2000h3.html">Replace the filter of the compressed air device</a></li>
+    <li><button class="tree blank"></button><a href="2000h4.html">Compressed air cutting - replace the filter element</a></li>
+    <li><button class="tree blank"></button><a href="2000h5.html">Check the indicator light of the machine</a></li>
+    <li><button class="tree blank"></button><a href="2000h6.html">Clean the guideway, front seal and strippers of the X, Y and Z axes</a></li>
+    <li><button class="tree blank"></button><a href="2000h7.html">Cleaning the racks on the X and Y axes</a></li>
+    <li><button class="tree blank"></button><a href="2000h8.html">Check and clean the bellows on the X and Y axes</a></li>
+    <li><button class="tree blank"></button><a href="2000h9.html">Clean the grease collecting tray</a></li>
+    <li><button class="tree blank"></button><a href="2000h10.html">Clean the splash plate</a></li>
+    <li><button class="tree blank"></button><a href="2000h11.html">Checking the lubrication line for air pockets, and exhaust if necessary</a></li>
+    <li><button class="tree blank"></button><a href="2000h12.html">Cleaning and lubricating the chain, cam and guide rail of the pallet transport unit</a></li>
+    <li><button class="tree blank"></button><a href="2000h13.html">Check the track rollers and brushes at the pallet</a></li>
+    <li><button class="tree blank"></button><a href="3000h.html">Change the cooling water</a></li>
+    <li><button class="tree blank"></button><a href="3000h1.html">Measure the conductivity of the cooling water</a></li>
+    <li><button class="tree blank"></button><a href="3000h2.html">Testing EMERGENCY STOP push-button</a></li>
+    <li><button class="tree blank"></button><a href="4000h.html">Check the guide carriage on the Z axe</a></li>
+    <li><button class="tree blank"></button><a href="7000h.html">Replace the filter cartridge</a></li>
    </ul>
   </li>
  </ul>
@@ -63,18 +80,18 @@
  </div>
  <div>/</div>
  <div>
-  <a href="500h3.html">Clean the calibration plate and nozzle cleaning</a>
+  <a href="500h3.html">Clean the calibration plate and nozzle cleaning brushes</a>
  </div>
 </nav>
 
             <div id="site-crumb-below">
                 <div id="site-toc-left">
                     <article id="article">
-                        <h1>Clean the calibration plate and nozzle cleaning</h1>
+                        <h1>Clean the calibration plate and nozzle cleaning brushes</h1>
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<div class="title">Machine operator</div>
+<div class="title">Machine Operator</div>
 <p><span class="image"><img src="img/operator.png" alt="Operator"></span></p>
 </div>
 <div class="paragraph">
