--- a/TRUMPF/maintenancetask/index.html
+++ b/TRUMPF/maintenancetask/index.html
@@ -39,12 +39,29 @@
     <li><button class="tree blank"></button><a href="500h.html">Check the purging valve</a></li>
     <li><button class="tree blank"></button><a href="500h1.html">Compressed air cutting - replace the activated carbon filter</a></li>
     <li><button class="tree blank"></button><a href="500h2.html">Check the pre-filter element and replace it if necessary</a></li>
-    <li><button class="tree blank"></button><a href="500h3.html">Clean the calibration plate and nozzle cleaning</a></li>
+    <li><button class="tree blank"></button><a href="500h3.html">Clean the calibration plate and nozzle cleaning brushes</a></li>
     <li><button class="tree blank"></button><a href="500h4.html">Check the traction chain and drive pin</a></li>
     <li><button class="tree blank"></button><a href="500h5.html">Check the plate positioning clamp</a></li>
     <li><button class="tree blank"></button><a href="1000h.html">Check the safety door lock of the protective door</a></li>
     <li><button class="tree blank"></button><a href="2000h.html">Lubricating the fixing device on pallet changer</a></li>
     <li><button class="tree blank"></button><a href="2000h1.html">Check the filter of dispatch</a></li>
+    <li><button class="tree blank"></button><a href="2000h2.html">Testing the input controller for operating pressure</a></li>
+    <li><button class="tree blank"></button><a href="2000h3.html">Replace the filter of the compressed air device</a></li>
+    <li><button class="tree blank"></button><a href="2000h4.html">Compressed air cutting - replace the filter element</a></li>
+    <li><button class="tree blank"></button><a href="2000h5.html">Check the indicator light of the machine</a></li>
+    <li><button class="tree blank"></button><a href="2000h6.html">Clean the guideway, front seal and strippers of the X, Y and Z axes</a></li>
+    <li><button class="tree blank"></button><a href="2000h7.html">Cleaning the racks on the X and Y axes</a></li>
+    <li><button class="tree blank"></button><a href="2000h8.html">Check and clean the bellows on the X and Y axes</a></li>
+    <li><button class="tree blank"></button><a href="2000h9.html">Clean the grease collecting tray</a></li>
+    <li><button class="tree blank"></button><a href="2000h10.html">Clean the splash plate</a></li>
+    <li><button class="tree blank"></button><a href="2000h11.html">Checking the lubrication line for air pockets, and exhaust if necessary</a></li>
+    <li><button class="tree blank"></button><a href="2000h12.html">Cleaning and lubricating the chain, cam and guide rail of the pallet transport unit</a></li>
+    <li><button class="tree blank"></button><a href="2000h13.html">Check the track rollers and brushes at the pallet</a></li>
+    <li><button class="tree blank"></button><a href="3000h.html">Change the cooling water</a></li>
+    <li><button class="tree blank"></button><a href="3000h1.html">Measure the conductivity of the cooling water</a></li>
+    <li><button class="tree blank"></button><a href="3000h2.html">Testing EMERGENCY STOP push-button</a></li>
+    <li><button class="tree blank"></button><a href="4000h.html">Check the guide carriage on the Z axe</a></li>
+    <li><button class="tree blank"></button><a href="7000h.html">Replace the filter cartridge</a></li>
    </ul>
   </li>
  </ul>
@@ -125,6 +142,57 @@ instructions to perform the maintenance.</p>
 </li>
 <li>
 <p><a href="2000h1.html">Exhaust system - Check the filter of dispatch</a></p>
+</li>
+<li>
+<p><a href="2000h2.html">Instrument panel - Testing the input controller for operating pressure</a></p>
+</li>
+<li>
+<p><a href="2000h3.html">Instrument panel - Replace the filter of the compressed air device</a></p>
+</li>
+<li>
+<p><a href="2000h4.html"> Instrument panel - Compressed air cutting: replace the filter element</a></p>
+</li>
+<li>
+<p><a href="2000h5.html">Machine - Check the indicator light of the machine</a></p>
+</li>
+<li>
+<p><a href="2000h6.html">Motion unit - Clean the guideway, front seal and strippers of the X, Y and Z axes</a></p>
+</li>
+<li>
+<p><a href="2000h7.html">Motion unit - Cleaning the racks on the X and Y axes</a></p>
+</li>
+<li>
+<p><a href="2000h8.html">Motion unit - Check and clean the bellows on the X and Y axes</a></p>
+</li>
+<li>
+<p><a href="2000h9.html">Motion unit - Clean the grease collecting tray</a></p>
+</li>
+<li>
+<p><a href="2000h10.html">Motion unit - Clean the splash plate</a></p>
+</li>
+<li>
+<p><a href="2000h11.html">Motion unit - Checking the lubrication line for air pockets, and exhaust if necessary</a></p>
+</li>
+<li>
+<p><a href="2000h12.html">Pallet changer - Cleaning and lubricating the chain, cam and guide rail of the pallet transport unit</a></p>
+</li>
+<li>
+<p><a href="2000h13.html">Pallet changer - Check the track rollers and brushes at the pallet</a></p>
+</li>
+<li>
+<p><a href="3000h.html">Process cooler - Change the cooling water</a></p>
+</li>
+<li>
+<p><a href="3000h1.html">Process cooler - Measure the conductivity of the cooling water</a></p>
+</li>
+<li>
+<p><a href="3000h2.html">Electrical cabinet - Testing EMERGENCY STOP push-button</a></p>
+</li>
+<li>
+<p><a href="4000h.html">Motion unit - Check the guide carriage on the Z axe</a></p>
+</li>
+<li>
+<p><a href="7000h.html">Exhaust device - Replace the filter cartridge</a></p>
 </li>
 </ol>
 </div>
